--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,9 +4,13 @@ on:
   push:
     paths-ignore:
       - '**/*.md'
+    branches:
+      - typosearch-go
   pull_request:
     paths-ignore:
       - '**/*.md'
+    branches:
+      - typosearch-go
 
 jobs:
   test:
